# Diana

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.vercel  LICENSE  Makefile  README.md  TASK.md  pyproject.toml
backend/: pyproject.toml
backend/src/: .env.sample  envs.py  main.py
benchmark/: README.md  __init__.py  __main__.py  cli.py  contracts.py  evaluator.py  h3p_report.py  metrics.py  report.py  task.py  v1_contracts.py  v1_evaluator.py  v1_personalization.py  v1_privacy.py  v1_report.py  v1_synthetic.py  v1_task.py
benchmark/data/: __init__.py  adapter.py  features.py  splits.py  v1_adapter.py  v1_features.py  v1_folds.py
benchmark/docs/: BENCHMARK_CARD.md  BENCHMARK_CARD_V1.md  DATA_ACCESS.md  DATA_CARD.md  TASK_CARD.md  TASK_CARD_V1.md
benchmark/tests/: test_contracts.py  test_evaluator.py  test_leakage.py  test_metrics.py  test_split.py  test_v1_contracts.py  test_v1_evaluator_independence.py  test_v1_features.py  test_v1_folds_personalization.py  test_v1_real_contract.py  test_v1_release_privacy.py
configs/: diana_h3p_v1.yaml  hormonbench_v0.yaml  hormonbench_v1.yaml
docs/: CHALLENGE_SUBMISSION.md  DEMO_SCRIPT.md  RELEASE_SAFETY.md
frontend/: components.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
model/: README.md  __init__.py  __main__.py  base.py  cli.py  common.py  personalization.py  registry.py  v1_base.py  v1_common.py  v1_pipeline.py  v1_registry.py
scripts/: phase0_audit.py  run_diana_h3p_v1.py  run_hormonbench_v0.py  run_hormonbench_v1.py
(+79 files in other folders)
